# module36Homework

./: CMakeLists.txt
sources/: Database.cpp  Database.h  Test.cpp  loginform.cpp  loginform.h  loginform.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationform.cpp  registrationform.h  registrationform.ui  servermainwindow.cpp  servermainwindow.h  servermainwindow.ui  startscreen.cpp  startscreen.h  startscreen.ui  startserverscreen.cpp  startserverscreen.h  startserverscreen.ui  utility.h
